tests/ui/cli/error_format.ascii.stderr
error: expected one of `(`, `.`, `;`, `?`, `[`, or `{`, found `}`
  --> ROOT/tests/ui/cli/error_format.sol:LL:CC
   |
LL |         uint256 z = x + y
   |                          - expected one of `(`, `.`, `;`, `?`, `[`, or `{`
LL |     }
   |     ^ unexpected token

error: aborting due to 1 previous error

